@@ -3,16 +3,19 @@ NULL =
 icon_DATA = \
         emblem-audio.svg \
         emblem-camera.svg \
+        emblem-cool.svg \
+        emblem-danger.svg \
         emblem-documents.svg \
         emblem-fun.svg \
         emblem-noread.svg \
         emblem-nowrite.svg \
+        emblem-ohno.svg \
         emblem-package.svg \
         emblem-pictures.svg \
         emblem-relax.svg \
         emblem-seal.svg \
         emblem-symbolic-link.svg \
-        emblem-video.svg \
+        emblem-multimedia.svg \
         emblem-web.svg \
         $(NULL)
 EXTRA_DIST = $(icon_DATA)
