@@ -1,3 +1,10 @@
+2003-03-21  Jakub Steiner <jimmac@ximian.com>
+
+	* emblems/emblem-video.svg -> emblem-multimedia: rename
+	* emblem-danger.svg:
+	* emblem-ohno.svg:
+	* emblem-cool.svg: replace the default
+
 2003-03-06  Jakub Steiner <jimmac@ximian.com>
 
 	* COPYING: it should have a license
